<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    style="@style/MainStyle"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.android.quizprojectfinal.QuizQuestionsActivity">

    <!-- Heading (STAYS BOUND TO TOP OF THE SCREEN)-->
    <TextView
        style="@style/HeadingTextStyle"
        android:text="@string/heading_questions" />

    <ScrollView
        android:id="@+id/scroll_view_id"
        style="@style/ScrollsStyle">

        <LinearLayout style="@style/InsideScrollsLayoutStyle">

            <TextView style="@style/LineStyle" />

            <!-- First question (EditText)-->
            <LinearLayout style="@style/EachQuestionLayoutStyle">

                <TextView
                    style="@style/QuestionStyle"
                    android:text="@string/question_one" />

                <EditText
                    android:id="@+id/witchers_name"
                    style="@style/InputTextStyle"
                    android:hint="@string/question_one_hint" />
            </LinearLayout>

            <TextView style="@style/LineStyle" />

            <!-- Second question (CheckBox)-->
            <LinearLayout style="@style/EachQuestionLayoutStyle">

                <TextView
                    style="@style/QuestionStyle"
                    android:text="@string/question_two" />

                <CheckBox
                    android:id="@+id/answer_two_1"
                    style="@style/CheckboxStyle"
                    android:onClick="isClicked"
                    android:text="@string/question_two_1" />

                <CheckBox
                    android:id="@+id/answer_two_2"
                    style="@style/CheckboxStyle"
                    android:onClick="isClicked"
                    android:text="@string/question_two_2" />

                <CheckBox
                    android:id="@+id/answer_two_3"
                    style="@style/CheckboxStyle"
                    android:onClick="isClicked"
                    android:text="@string/question_two_3" />

                <CheckBox
                    android:id="@+id/answer_two_4"
                    style="@style/CheckboxStyle"
                    android:onClick="isClicked"
                    android:text="@string/question_two_4" />

                <CheckBox
                    android:id="@+id/answer_two_5"
                    style="@style/CheckboxStyle"
                    android:onClick="isClicked"
                    android:text="@string/question_two_5" />

                <CheckBox
                    android:id="@+id/answer_two_6"
                    style="@style/CheckboxStyle"
                    android:onClick="isClicked"
                    android:text="@string/question_two_6" />

                <CheckBox
                    android:id="@+id/answer_two_7"
                    style="@style/CheckboxStyle"
                    android:onClick="isClicked"
                    android:text="@string/question_two_7" />

                <CheckBox
                    android:id="@+id/answer_two_8"
                    style="@style/CheckboxStyle"
                    android:onClick="isClicked"
                    android:text="@string/question_two_8" />

                <CheckBox
                    android:id="@+id/answer_two_9"
                    style="@style/CheckboxStyle"
                    android:onClick="isClicked"
                    android:text="@string/question_two_9" />

                <CheckBox
                    android:id="@+id/answer_two_10"
                    style="@style/CheckboxStyle"
                    android:onClick="isClicked"
                    android:text="@string/question_two_10" />
            </LinearLayout>

            <TextView style="@style/LineStyle" />

            <!-- Third question (Radio Group) -->
            <LinearLayout style="@style/EachQuestionLayoutStyle">

                <TextView
                    style="@style/QuestionStyle"
                    android:text="@string/question_three" />

                <RadioGroup
                    android:id="@+id/question_3_group"
                    style="@style/RadioGroupStyle">

                    <RadioButton
                        android:id="@+id/answer_three_1"
                        style="@style/RadioButtonStyle"
                        android:onClick="isClicked"
                        android:text="@string/question_three_1" />

                    <RadioButton
                        android:id="@+id/answer_three_2"
                        style="@style/RadioButtonStyle"
                        android:onClick="isClicked"
                        android:text="@string/question_three_2" />

                    <RadioButton
                        android:id="@+id/answer_three_3"
                        style="@style/RadioButtonStyle"
                        android:onClick="isClicked"
                        android:text="@string/question_three_3" />
                </RadioGroup>
            </LinearLayout>

            <TextView style="@style/LineStyle" />

            <!-- Fourth question (RadioGroup) -->
            <LinearLayout style="@style/EachQuestionLayoutStyle">

                <TextView
                    style="@style/QuestionStyle"
                    android:text="@string/question_four"/>
                <RadioGroup
                    android:id="@+id/question_4_group"
                    style="@style/RadioGroupStyle">

                    <RadioButton
                        android:id="@+id/answer_four_1"
                        style="@style/RadioButtonStyle"
                        android:onClick="isClicked"
                        android:text="@string/question_four_1" />

                    <RadioButton
                        android:id="@+id/answer_four_2"
                        style="@style/RadioButtonStyle"
                        android:onClick="isClicked"
                        android:text="@string/question_four_2" />

                    <RadioButton
                        android:id="@+id/answer_four_3"
                        style="@style/RadioButtonStyle"
                        android:onClick="isClicked"
                        android:text="@string/question_four_3" />

                    <RadioButton
                        android:id="@+id/answer_four_4"
                        style="@style/RadioButtonStyle"
                        android:onClick="isClicked"
                        android:text="@string/question_four_4" />
                </RadioGroup>
            </LinearLayout>

            <TextView style="@style/LineStyle" />

            <!-- Submit button -->
            <Button
                style="@style/SubmitButton"
                android:onClick="displayResults"
                android:text="@string/button" />

            <TextView style="@style/LineStyle" />

            <!--Reste Button-->
            <Button
                style="@style/SubmitButton"
                android:onClick="scoreReset"
                android:text="@string/reset_button" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>
